--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div id="troca_imagem">
                 <img src="img/code.png" id="img_troca_imagem" alt="Linguagens de Programação Web">
-                <p>Programação Web</p>
+                <p id="p_linguagem_prog">Programação Web</p>
             </div>
             <div>
                 <p>Lista Principal</p>
@@ -96,7 +96,7 @@
                 <ul id="lista_vazia">
 
                 </ul>
-                <progress max="6" value="0"></progress>
+                <progress id="prog_lista_vazia" max="6" value="0"></progress>
             </div>
         </div>
     </main>
